Update the branch to the latest version