@@ -1,13 +1,16 @@
 package com.intland.codebeamer.integration.api.service.tracker;
 
 import java.util.List;
+import java.util.Objects;
 
 import org.apache.commons.collections4.CollectionUtils;
 
 import com.intland.codebeamer.integration.api.ApiUser;
 import com.intland.codebeamer.integration.api.service.AbstractApiService;
+import com.intland.codebeamer.integration.api.service.user.UserApiService;
 import com.intland.codebeamer.integration.configuration.ApplicationConfiguration;
 import com.intland.swagger.client.internal.api.TrackerApi;
+import com.intland.swagger.client.model.AbstractField;
 import com.intland.swagger.client.model.ChoiceOptionReference;
 import com.intland.swagger.client.model.FieldReference;
 import com.intland.swagger.client.model.OptionChoiceField;
@@ -18,6 +21,10 @@ public class TrackerFieldApiService extends AbstractApiService {
 
 	public TrackerFieldApiService(ApplicationConfiguration applicationConfiguration) {
 		this(applicationConfiguration, applicationConfiguration.getApiUser());
+	}
+
+	public TrackerFieldApiService(ApplicationConfiguration applicationConfiguration, String username) {
+		this(applicationConfiguration, new ApiUser(username, UserApiService.DEFAULT_PASSWORD));
 	}
 
 	public TrackerFieldApiService(ApplicationConfiguration applicationConfiguration, String username, String password) {
@@ -52,9 +59,21 @@ public class TrackerFieldApiService extends AbstractApiService {
 		}
 	}
 
+	public AbstractField getTrackerField(TrackerId tracker, Integer fieldId) {
+		try {
+			return trackerApi.getTrackerField(tracker.id(), fieldId);
+		} catch (Exception e) {
+			throw new IllegalStateException(e.getMessage(), e);
+		}
+	}
+
 	public int resolveChoiceOptionId(Tracker tracker, String fieldName, String optionName) {
-		FieldReference field = findFieldReference(tracker, fieldName);
-		return resolveChoiceOptionId(tracker, field, optionName);
+		return resolveChoiceOptionId(tracker.id(), fieldName, optionName);
+	}
+	
+	public int resolveChoiceOptionId(TrackerId trackerId, String fieldName, String optionName) {
+		TrackerField field = findFieldReference(trackerId, fieldName);
+		return resolveChoiceOptionId(trackerId, field, optionName);
 	}
 	
 	public void deleteTracker(TrackerId trackerId) {
@@ -65,8 +84,24 @@ public class TrackerFieldApiService extends AbstractApiService {
 		}
 	}
 
-	private Integer resolveChoiceOptionId(Tracker tracker, FieldReference field, String value) {
-		List<ChoiceOptionReference> foundChoiceOptions = this.getChoiceOptionsFor(tracker.id(), field.getId()).stream()
+	public TrackerField findFieldReference(TrackerId trackerId, String fieldName) {
+		List<TrackerField> fields = this.getTrackerFields(trackerId).stream()
+				.filter(f -> fieldName.equals(f.getName()))
+				.map(TrackerField::new)
+				.toList();
+
+		if (CollectionUtils.isEmpty(fields)) {
+			throw new IllegalStateException("No field is found by name '%s'".formatted(fieldName));
+		}
+
+		if (CollectionUtils.size(fields) > 1) {
+			throw new IllegalStateException("More than one field is found by name '%s', Field: %s".formatted(fieldName, fields));
+		}
+		return fields.getFirst();
+	}
+
+	private int resolveChoiceOptionId(TrackerId trackerId, TrackerField field, String value) {
+		List<ChoiceOptionReference> foundChoiceOptions = this.getChoiceOptionsFor(trackerId, field.getId()).stream()
 			.filter(c -> value.equals(c.getName()))
 			.toList();
 		
@@ -77,23 +112,8 @@ public class TrackerFieldApiService extends AbstractApiService {
 		if (CollectionUtils.size(foundChoiceOptions) > 1) {
 			throw new IllegalStateException("More than one choice option is found by name '%s', Field: %s".formatted(value, foundChoiceOptions));
 		}
-		
-		return foundChoiceOptions.get(0).getId();
-	}
 
-	private FieldReference findFieldReference(Tracker tracker, String fieldName) {
-		List<FieldReference> fields = this.getTrackerFields(tracker).stream()
-				.filter(f -> fieldName.equals(f.getName()))
-				.toList();
-		
-		if (CollectionUtils.isEmpty(fields)) {
-			throw new IllegalStateException("No field is found by name '%s'".formatted(fieldName));
-		}
-		
-		if (CollectionUtils.size(fields) > 1) {
-			throw new IllegalStateException("More than one field is found by name '%s', Field: %s".formatted(fieldName, fields));
-		}
-		return fields.get(0);
+		return Objects.requireNonNull(foundChoiceOptions.getFirst().getId()).intValue();
 	}
 
 }
